8. Скачивание файла с ограничением. [#144271 #526143]